[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "libyay"
version = "1.0.0"
description = "A parser and serializer for the YAY data format"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Kris Kowal" },
]
keywords = ["yay", "parser", "serialization", "config", "data-format"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup",
]

[project.urls]
Homepage = "https://kriskowal.com/yay"
Repository = "https://github.com/kriskowal/yay"
Documentation = "https://github.com/kriskowal/yay/tree/main/python"
