[package]
name = "binyay"
version = "1.0.0"
edition = "2021"
description = "YAY command-line tool for parsing, formatting, and transcoding YAY documents"
license = "Apache-2.0"
homepage = "https://kriskowal.com/yay"
repository = "https://github.com/kriskowal/yay"
readme = "README.md"
keywords = ["yay", "cli", "formatter", "transcoder"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "yay"
path = "src/main.rs"

[dependencies]
base64 = "0.22"
ciborium = "0.2"
libyay = { version = "1.0.0", path = "../libyay" }
num-bigint = "0.4"
num-traits = "0.2"
serde_yaml = "0.9"
toml_edit = "0.22"
